<resources>
    <string name="app_name">Android calculator</string>
    <string name="enter_expression">Enter expression</string>
    <string name="calc_expression">Calc expression</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="division">/</string>
    <string name="_3">3</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="multiply">x</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="ac">AC</string>
    <string name="view_history">View history</string>
</resources>