<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/cardview_dark_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Calculator" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:gravity="center_vertical"
        tools:text="0"
        android:textSize="@dimen/textview_size"
        android:background="@color/cardview_shadow_start_color"
        />

<!--    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_expression"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:textColorHint="#6D4C41"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/setExpressionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_expression"
        android:textSize="25sp"/>-->

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button7"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/button8"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/button9"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/buttonPlus"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
            android:id="@+id/button4"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="@dimen/button_textsize"
            style="?android:attr/buttonBarButtonStyle"

            />
        <Button
            android:id="@+id/button5"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="@dimen/button_textsize"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button6"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="@dimen/button_textsize"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/buttonMinus"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="@dimen/button_textsize"
            style="?android:attr/buttonBarButtonStyle"
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button1"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"

                />
            <Button
                android:id="@+id/button2"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/button3"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/buttonMultiply"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/buttonDelete"
                android:layout_height="wrap_content"
                android:text="@string/ac"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"

                />
            <Button
                android:id="@+id/button0"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/buttonEquals"
                android:layout_height="wrap_content"
                android:text="@string/equals"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/buttonDivision"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonBarButtonStyle"
                />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/button_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_history"
        android:textSize="20sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>